# ChangeLog for dev-cpp/gflags
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.27 2014/07/15 01:32:27 floppym Exp $

  15 Jul 2014; Mike Gilbert <floppym@gentoo.org> gflags-2.1.1.ebuild:
  Drop shared libs again; ABI is not stable.

  15 Jul 2014; Mike Gilbert <floppym@gentoo.org> +files/gflags-2.1.1-libs.patch,
  gflags-2.1.1.ebuild:
  Enable shared libs, make static libs optional. Backport libdir and soname
  changes from upstream.

*gflags-2.1.1 (14 Jul 2014)

  14 Jul 2014; Patrick Lauer <patrick@gentoo.org> +gflags-2.1.1.ebuild:
  Bump, needed as dependency of sys-apps/lmctfy

*gflags-2.0-r1 (25 Feb 2014)

  25 Feb 2014; Mike Frysinger <vapier@gentoo.org> +gflags-2.0-r1.ebuild:
  Add multilib-minimal support.

  19 Oct 2013; Mike Frysinger <vapier@gentoo.org> gflags-2.0.ebuild:
  Add keywords for everyone.

  18 Oct 2013; Mike Frysinger <vapier@gentoo.org> gflags-2.0.ebuild:
  Add more keywords.

  07 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> gflags-2.0.ebuild:
  Stable on arm, wrt bug #479720

  04 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> gflags-2.0.ebuild:
  Stable on amd64 and x86, wrt bug #479720

  16 Dec 2012; Pacho Ramos <pacho@gentoo.org> -gflags-1.7.ebuild, metadata.xml:
  Drop maintainer due retirement, #95685

  19 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> gflags-2.0.ebuild:
  Keyworded ~amd64-linux and ~x86-linux

  03 Mar 2012; Krzysztof Pawlik <nelchael@gentoo.org> -gflags-1.5.ebuild,
  -gflags-1.6.ebuild:
  Remove old versions.

  16 Feb 2012; Mike Frysinger <vapier@gentoo.org> gflags-1.5.ebuild,
  gflags-1.6.ebuild, gflags-1.7.ebuild, gflags-2.0.ebuild:
  Touch up style -- no functional changes.

*gflags-2.0 (16 Feb 2012)
*gflags-1.7 (16 Feb 2012)

  16 Feb 2012; Krzysztof Pawlik <nelchael@gentoo.org> +gflags-1.7.ebuild,
  +gflags-2.0.ebuild:
  Version bumps.

  11 Nov 2011; Mike Frysinger <vapier@gentoo.org> gflags-1.5.ebuild,